[package]
name = "mini-key-val"
version = "0.1.0"
authors = ["jonathan <Jonathan.Heinz@t-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
rocket_contrib = "0.4.7"